--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
+<head>
+<style type="text/css">
+  body{color:red;font-size:100px}
+  </style>
+</head>
 <body>
-hello
+hello world
 </body>
 </html>
