--- a/category.html
+++ b/category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>友情链接</title>
+        <title>文章分类</title>
         <link rel="stylesheet" href="/css/nav.css">
         <link rel="stylesheet" href="/css/aside.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -17,13 +17,17 @@
         <div class="container">
             <main>
                 <article>
-                    <h1>友情链接</h1>
+                    <h1>chrome</h1>
                     <ul>
-                        <li><a href="https://www.baidu.com">百度</a></li>
-                        <li><a href="https://www.sina.com.cn">新浪</a></li>
-                        <li><a href="https://www.sohu.com">搜狐</a></li>
-                        <li><a href="https://www.qq.com">腾讯</a></li>
-                        <li><a href="https://www.163.com">网易</a></li>
+                        <li><a href="/article/Chrome浏览器禁止Flash P2P.html">Chrome浏览器禁止Flash P2P</a></li>
+                        <li><a href="/article/禁止 chrome favicon.ico 请求.html">禁止 chrome favicon.ico 请求</a></li>
+                        <li><a href="/article/chrome允许所有网站运行flash.html">chrome允许所有网站运行flash</a></li>
+                    </ul>
+                    <h1>ssr</h1>
+                    <ul>
+                        <li><a href="/article/CentOS6、CentOS7、debian安装SS.html">CentOS6、CentOS7、debian安装SS</a></li>
+                        <li><a href="/article/centos7安装SSR.html">centos7安装SSR</a></li>
+                        <li><a href="/article/centos7开启BBR.html">centos7开启BBR</a></li>
                     </ul>
                 </article>
             </main>
