--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/css/footer.css">
         <link rel="stylesheet" href="/css/aside.css">
         <script src="/js/nav.js" ></script>
-
+        <meta name="viewport" content="initial-scale=1.0">
     </head>
     <body>
 
