--- a/category.html
+++ b/category.html
@@ -12,6 +12,7 @@
         </style>
     
         <script src="/js/nav.js"></script>
+        <meta name="viewport" content="initial-scale=1.0">
     </head>
     <body>
         <div class="container">
