--- a/article/CentOS6、CentOS7、debian安装SS.html
+++ b/article/CentOS6、CentOS7、debian安装SS.html
@@ -11,6 +11,7 @@
     </style>
 
     <script src="/js/nav.js"></script>
+    <meta name="viewport" content="initial-scale=1.0">
 </head>
 <html>
     <body>
