--- a/article/centos7安装SSR.html
+++ b/article/centos7安装SSR.html
@@ -11,6 +11,7 @@
     </style>
 
     <script src="/js/nav.js"></script>
+    <meta name="viewport" content="initial-scale=1.0">
 </head>
 <html>
     <body>
