--- a/article/chrome允许所有网站运行flash.html
+++ b/article/chrome允许所有网站运行flash.html
@@ -11,6 +11,7 @@
     </style>
 
     <script src="/js/nav.js"></script>
+    <meta name="viewport" content="initial-scale=1.0">
 </head>
 <html>
     <body>
