--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="initial-scale=1.0">
     </head>
     <body>
-<video src="1.mp4" controls />
+<video src="1.mp4" controls ></video>
         <div class="container">
                 <main>
                         <section>
